mash: Fix create fullscreen widget

Set kShowStateKey property from init params show_state so that
mus window is created properly.

BUG=714804
TEST=DesktopWindowTreeHostMusTest.CreateFullscreenWidget

Review-Url: https://codereview.chromium.org/2840903002
Cr-Commit-Position: refs/heads/master@{#467572}

Former-commit-id: c1ad8f0a9e80c7b864f432fb4cdbb6f987de53fb